Add initiative filtering by destination to API.
